<resources>
    <string name="app_name" translatable="false">WorkTime</string>
    <string name="app_key" translatable="false">YOUR_APP_KEY_HERE</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="background_color" translatable="false">white</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="help" translatable="false">\?</string>
    <string name="help_profile">Swipe the entry for an action.\nLong press to locate.</string>
    <string name="help_public_holidays">Swipe the entry for an action.</string>
    <string name="public_holidays_removed">Public holiday removed.</string>
    <string name="profile_removed">Profile removed.</string>
    <string name="undo">UNDO</string>
    <string name="delete_profile">Are you sure you want to delete profile</string>
    <string name="delete_public_holiday">Are you sure you want to delete public holiday</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="app_title" translatable="false">Work Time</string>
    <string name="profile">Profile</string>
    <string name="profile2">Profile:</string>
    <string name="export">Export</string>
    <string name="statistics">Statistics</string>
    <string name="public_holidays">Public holidays</string>
    <string name="sickness">Sickness</string>
    <string name="holidays">Holidays</string>
    <string name="unpaid">Unpaid</string>
    <string name="recovery">Recovery</string>
    <string name="recovery_min">R</string>
    <string name="statistics_hours">Hours</string>
    <string name="work_time">Work time</string>
    <string name="work_days">Work days</string>
    <string name="monthly_hours">Monthly hours</string>
    <string name="days_lower_case">days</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name :</string>
    <string name="date">Date :</string>
    <string name="error">Error</string>
    <string name="error_no_name">Name field cannot be empty</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="day_monday_2lt">Mo</string>
    <string name="day_tuesday_2lt">Tu</string>
    <string name="day_wednesday_2lt">We</string>
    <string name="day_thursday_2lt">Th</string>
    <string name="day_friday_2lt">Fr</string>
    <string name="day_saturday_2lt">Sa</string>
    <string name="day_sunday_2lt">Su</string>
    <string name="on_double_back_exit_text">Press once again to exit!</string>
    <string name="on_double_back_back_text">Press once again to back to the home screen!</string>
    <string name="type_morning">Morning type :</string>
    <string name="type_afternoon">Afternoon type :</string>
    <string name="end_afternoon">Afternoon departure:</string>
    <string name="end_morning">Morning departure:</string>
    <string name="start_afternoon">Afternoon arrival:</string>
    <string name="start_morning">Morning arrival:</string>
    <string name="additional_break">Additional break:</string>
    <string name="at_work">At work</string>
    <string name="default_wage" translatable="false">0.00</string>
    <string name="default_hours" translatable="false">00:00</string>
    <string name="error_invalid_start">Invalid departure time.</string>
    <string name="error_invalid_end">Invalid arrival time.</string>
    <string name="error_invalid_start_end_morning">The morning departure and arrival times are invalid.</string>
    <string name="error_invalid_legal_worktime">The legal work time is invalid.</string>
    <string name="error_widget_sql">Unable to open SQL database</string>
    <string name="text_for">for</string>
    <string name="at">at</string>
    <string name="and">and</string>
    <string name="more">more</string>
    <string name="hours_lower_case">hour(s)</string>
    <string name="pref_title_settings">Settings</string>
    <string name="pref_title_work_time_by_day">Work time by day</string>
    <string name="pref_summary_work_time_by_day">Duration of working time per day.</string>
    <string name="pref_title_currency">Currency</string>
    <string name="pref_summary_currency">Symbol used for the currency.</string>
    <string name="pref_title_hourly_rate">Hourly rate</string>
    <string name="pref_summary_hourly_rate">Amount used for the hourly rate.</string>
    <string name="pref_title_database">Database</string>
    <string name="pref_summary_database">This section allows you to manage the database importation/exportation.</string>
    <string name="pref_title_import_export">Import/Export</string>
    <string name="pref_summary_import_export">Import/Export the database.</string>
    <string name="pref_summary_import_export_auto_save">Auto export</string>
    <string name="pref_title_import_export_auto_save">When a change is made, the database will be exported automatically using the dropbox service (on app exit).</string>
    <string name="pref_fragments_title_periodicity">Periodicity</string>
    <string name="pref_fragments_summary_periodicity">Choose when automatic export should be made.</string>
    <string name="pref_title_device">Device</string>
    <string name="pref_title_dropbox">Dropbox</string>
    <string name="pref_title_display">Display</string>
    <string name="pref_summary_display">This section allows you to manage the display configuration</string>
    <string name="pref_title_excel_export">Excel Export</string>
    <string name="pref_summary_excel_export">This section allows you to manage the excel export configuration</string>
    <string name="pref_title_export">Export</string>
    <string name="pref_title_import">Import</string>
    <string name="pref_summary_export_mail">Email address used to send the exported file.</string>
    <string name="pref_title_export_mail">Email address</string>
    <string name="pref_summary_export_mail_enable">Send a mail after the file export.</string>
    <string name="pref_title_export_mail_enable">Activate email on export</string>
    <string name="pref_summary_hide_wage">Hide the wages entries.</string>
    <string name="pref_title_hide_wage">Hide wage</string>
    <string name="pref_summary_export_to_device">Export the database to the device.</string>
    <string name="pref_summary_export_to_dropbox">Export the database to dropbox.</string>
    <string name="pref_summary_import_from_device">Import the database from the device.</string>
    <string name="pref_summary_import_from_dropbox">Import the database from dropbox.</string>
    <string name="pref_summary_day_display_week">Displays the row of the week number in the work time view (the application will need to be restarted).</string>
    <string name="pref_title_day_display_week">Week number</string>
    <string name="pref_summary_day_row_height">Height of the rows for the days list in the work time view (the application will need to be restarted).</string>
    <string name="pref_title_day_row_height">Rows height</string>
    <string name="pref_title_learning">Learning of profiles</string>
    <string name="pref_summary_learning">This section allows you to manage the learning of the profile of preference used by the insertion of the days of the main view.</string>
    <string name="pref_summary_learning_threshold">Allows to manage the learning threshold.</string>
    <string name="pref_title_learning_threshold">Threshold</string>
    <string name="pref_title_learning_list">List</string>
    <string name="pref_summary_learning_list">List learning profiles.</string>
    <string name="pref_title_learning_clear">Clear</string>
    <string name="pref_summary_learning_clear">Clear all the learning values.</string>
    <string name="pref_fragments_title">Default home</string>
    <string name="pref_fragments_summary">Selects the default home to display at the start of the application.</string>
    <string name="pref_summary_scroll_to_current_day">Automatic scrolling of the working time view to the current day (the application will need to be restarted).</string>
    <string name="pref_title_scroll_to_current_day">Scroll to the current day</string>
    <string name="pref_summary_hide_exit_button">Hide the exit button from the menu.</string>
    <string name="pref_title_hide_exit_button">Hide the exit button</string>
    <string name="use_folder">Use this folder</string>
    <string name="use_file">Use this file</string>
    <string name="chooser_long_press_message">Long press to select.</string>
    <string name="chooser_parent_directory">Parent Directory</string>
    <string name="chooser_folder">Folder</string>
    <string name="chooser_file_size">File size</string>
    <string name="export_success">Export success</string>
    <string name="import_success">Import success</string>
    <string name="permissions_read_ext_storage">The import/export functions needs the external storage read/write, internet(dropbox) access permissions and geolocation for profile location</string>
    <string name="year">Year :</string>
    <string name="export_no_items">No selected months to export</string>
    <string name="snack_hide">Hide</string>
    <string name="export_email_not_set">The email address is not set</string>
    <string name="email_sent_to_with_mail">The file is also stored into the public download directory</string>
    <string name="email_sent_to_without_mail">The file is stored into the public download directory</string>
    <string name="export_email_subject">WorkTime export</string>
    <string name="export_email_body">The attachment contain a report for the selected work time</string>
    <string name="export_email_senderMsg">Send email using :</string>
    <string name="overtime">Overtime</string>
    <string name="overtime_min">O</string>
    <string name="hour_in">Arriving time</string>
    <string name="hour_out">Departure time</string>
    <string name="break_time">Break time</string>
    <string name="wage">Wage :</string>
    <string name="total">Total</string>
    <string name="the_file_exists_part_1">The file</string>
    <string name="the_file_exists_part_2">already exists. Do you want to replace the existing file?d</string>
    <string name="confirm">Confirm</string>
    <string name="zero" translatable="false">0.00</string>
    <string name="week_letter">W</string>
    <string name="week">week</string>
    <string name="error_dropbox_upload">Unable to upload the file</string>
    <string name="error_dropbox_download">Unable to download the file</string>
    <string name="error_dropbox_list_directory">Unable to get the files list</string>
    <string name="data_transfer">Data transfers, please wait&#8230;</string>
    <string name="error_no_files">No file found !</string>
    <string name="box_select_db_file">Select</string>
    <string name="pref_title_infos">Information</string>
    <string name="pref_changelog_title">Changelog</string>
    <string name="pref_changelog_summary">Click to display the application changelog.</string>
    <string name="profiles_weight_reseted">Profiles weight reseted.</string>
    <string name="quickaccess">Quick access</string>
    <string name="bt_start">Start</string>
    <string name="bt_pause">Pause</string>
    <string name="bt_finalize">Finalize day</string>
    <string name="default_time" translatable="false">00:00</string>
    <string name="service_running">Finalize or pause quick access before update the day.</string>
    <string name="recurrence">Recurrence</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_latitude">Latitude</string>
    <string name="geolocate_me">Geolocate me</string>
</resources>