<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="prefScreenDisplay">
  <androidx.preference.PreferenceCategory
    android:title="@string/pref_title_settings"
    android:key="prefCatSettings"
    app:iconSpaceReserved="false">
    <androidx.preference.ListPreference
      android:key="prefDefaultHome"
      app:iconSpaceReserved="false"
      android:defaultValue="0"
      android:entries="@array/entries_fragments"
      android:summary="@string/pref_fragments_summary"
      android:entryValues="@array/values_fragments"
      android:title="@string/pref_fragments_title" />
    <androidx.preference.CheckBoxPreference
      app:iconSpaceReserved="false"
      android:key="prefHideWage"
      android:defaultValue="false"
      android:summary="@string/pref_summary_hide_wage"
      android:title="@string/pref_title_hide_wage" />
    <androidx.preference.EditTextPreference
      app:iconSpaceReserved="false"
      android:key="prefDayRowsHeight"
      android:defaultValue="80"
      android:summary="@string/pref_summary_day_row_height"
      android:title="@string/pref_title_day_row_height"
      android:inputType="numberDecimal" />
    <androidx.preference.CheckBoxPreference
      app:iconSpaceReserved="false"
      android:key="prefDayDisplayWeek"
      android:defaultValue="true"
      android:summary="@string/pref_summary_day_display_week"
      android:title="@string/pref_title_day_display_week" />
    <androidx.preference.CheckBoxPreference
      app:iconSpaceReserved="false"
      android:key="prefScrollToCurrentDay"
      android:defaultValue="false"
      android:summary="@string/pref_summary_scroll_to_current_day"
      android:title="@string/pref_title_scroll_to_current_day" />
    <androidx.preference.CheckBoxPreference
      app:iconSpaceReserved="false"
      android:key="prefHideExitButton"
      android:defaultValue="false"
      android:summary="@string/pref_summary_hide_exit_button"
      android:title="@string/pref_title_hide_exit_button" />
  </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
