<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="prefScreenExcelExport">
  <androidx.preference.PreferenceCategory
    android:title="@string/pref_title_export"
    android:key="prefCatExport"
    app:iconSpaceReserved="false">
    <androidx.preference.CheckBoxPreference
      android:key="prefExportMailEnable"
      app:iconSpaceReserved="false"
      android:defaultValue="true"
      android:summary="@string/pref_summary_export_mail_enable"
      android:title="@string/pref_title_export_mail_enable" />
    <androidx.preference.EditTextPreference
      app:iconSpaceReserved="false"
      android:enabled="true"
      android:key="prefExportMail"
      android:defaultValue=""
      android:summary="@string/pref_summary_export_mail"
      android:title="@string/pref_title_export_mail"
      android:inputType="textEmailAddress" />
    <androidx.preference.CheckBoxPreference
      app:iconSpaceReserved="false"
      android:key="prefExportHideWage"
      android:defaultValue="false"
      android:summary="@string/pref_summary_hide_wage"
      android:title="@string/pref_title_hide_wage" />
  </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
