<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="prefScreenDatabase">
  <androidx.preference.PreferenceCategory
    android:title="@string/pref_title_database"
    android:key="prefCatDatabase"
    app:iconSpaceReserved="false">
    <androidx.preference.CheckBoxPreference
      app:iconSpaceReserved="false"
      android:key="prefImportExportAutoSave"
      android:defaultValue="false"
      android:summary="@string/pref_summary_import_export_auto_save"
      android:title="@string/pref_title_import_export_auto_save" />
    <androidx.preference.ListPreference
      app:iconSpaceReserved="false"
      android:key="prefImportExportAutoSavePeriodicity"
      android:defaultValue="0"
      android:entries="@array/entries_periodicity"
      android:summary="@string/pref_fragments_summary_periodicity"
      android:entryValues="@array/values_periodicity"
      android:title="@string/pref_fragments_title_periodicity" />
    <androidx.preference.Preference
      app:iconSpaceReserved="false"
      android:key="prefImportExport"
      android:title="@string/pref_title_import_export"
      android:summary="@string/pref_summary_import_export" />
  </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
