<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:text="@string/default_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTime"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="120sp"
        android:textAlignment="center"/>

    <ToggleButton
        android:textOff="@string/bt_start"
        android:textOn="@string/bt_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTime"
        android:layout_alignParentStart="true"
        android:id="@+id/btStart"
        android:layout_alignParentEnd="true"/>

    <Button
        android:text="@string/bt_finalize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btStart"
        android:layout_alignParentEnd="true"
        android:id="@+id/btFinalize"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>
</RelativeLayout>
