<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">

  <com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:id="@+id/tilLatitude">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:inputType="numberDecimal"
      android:hint="@string/hint_latitude"
      android:imeOptions="actionNext"
      android:id="@+id/tieLatitude" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_alignParentStart="true"
    android:layout_below="@id/tilLatitude"
    android:id="@+id/tilLongitude">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:inputType="numberDecimal"
      android:hint="@string/hint_longitude"
      android:imeOptions="actionDone"
      android:id="@+id/tieLongitude" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
    android:layout_alignParentStart="true"
    android:layout_below="@id/tilLongitude"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/geolocate_me"
    android:id="@+id/btGeolocateMe" />
</RelativeLayout>