<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@mipmap/ic_plus_white"/>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/prl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:padding="5dp"
                android:visibility="gone"
                android:labelFor="@+id/etName"/>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tvName"
                android:padding="5dp"
                android:inputType="textCapSentences"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvProfile"
            android:layout_below="@+id/rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile2"
            android:padding="5dp"/>
        <Spinner
            android:id="@+id/spProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl"
            android:layout_toEndOf="@+id/tvProfile"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tvType"
            android:layout_below="@+id/tvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_marginTop="10sp"
            android:padding="5dp"/>

        <Spinner
            android:id="@+id/spType"
            android:layout_below="@+id/tvProfile"
            android:layout_toEndOf="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:padding="5dp"/>





        <TextView
            android:id="@+id/tvLblStartMorning"
            android:layout_below="@+id/tvType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_morning"
            app:layout_widthPercent="45%"
            android:layout_marginTop="10sp"
            android:padding="5dp"/>
        <View
            android:id="@+id/space1"
            android:layout_below="@+id/tvType"
            android:layout_toEndOf="@+id/tvLblStartMorning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="10%"
            android:padding="5dp"
            android:layout_marginTop="10sp"
            android:layout_above="@+id/tvStartMorning"/>
        <TextView
            android:id="@+id/tvLblEndMorning"
            android:layout_below="@+id/tvType"
            android:layout_toEndOf="@+id/space1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_morning"
            app:layout_widthPercent="45%"
            android:layout_marginTop="10sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tvStartMorning"
            android:layout_below="@+id/tvLblStartMorning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/default_hours"
            app:layout_widthPercent="45%"
            android:padding="5dp"/>
        <View
            android:id="@+id/space2"
            android:layout_below="@+id/space1"
            android:layout_toEndOf="@+id/tvStartMorning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="10%"
            android:padding="5dp"
            android:layout_above="@+id/tvLblStartAfternoon"/>
        <TextView
            android:id="@+id/tvEndMorning"
            android:layout_below="@+id/tvLblEndMorning"
            android:layout_toEndOf="@+id/space2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/default_hours"
            app:layout_widthPercent="45%"
            android:padding="5dp"/>


        <TextView
            android:id="@+id/tvLblStartAfternoon"
            android:layout_below="@+id/tvStartMorning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_afternoon"
            app:layout_widthPercent="45%"
            android:layout_marginTop="10sp"
            android:padding="5dp"/>
        <View
            android:id="@+id/space3"
            android:layout_below="@+id/space2"
            android:layout_toEndOf="@+id/tvLblStartAfternoon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="10%"
            android:padding="5dp"
            android:layout_marginTop="10sp"
            android:layout_above="@+id/tvStartAfternoon"/>
        <TextView
            android:id="@+id/tvLblEndAfternoon"
            android:layout_below="@+id/tvEndMorning"
            android:layout_toEndOf="@+id/space3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_afternoon"
            app:layout_widthPercent="45%"
            android:layout_marginTop="10sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tvStartAfternoon"
            android:layout_below="@+id/tvLblStartAfternoon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/default_hours"
            app:layout_widthPercent="45%"
            android:padding="5dp"/>
        <View
            android:id="@+id/space4"
            android:layout_below="@+id/space3"
            android:layout_toEndOf="@+id/tvStartAfternoon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="10%"
            android:padding="5dp"
            android:layout_above="@+id/tvLblAmount"/>
        <TextView
            android:id="@+id/tvEndAfternoon"
            android:layout_below="@+id/tvLblEndAfternoon"
            android:layout_toEndOf="@+id/space4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/default_hours"
            app:layout_widthPercent="45%"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tvLblAmount"
            android:layout_below="@+id/tvStartAfternoon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wage"
            app:layout_widthPercent="45%"
            android:padding="5dp"
            android:layout_marginTop="10sp"
            android:labelFor="@+id/etAmount"/>
        <EditText
            android:id="@+id/etAmount"
            android:layout_below="@+id/tvLblAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/empty"
            app:layout_widthPercent="45%"
            android:padding="5dp"
            android:inputType="numberDecimal"/>

    </android.support.percent.PercentRelativeLayout>
</FrameLayout>